<resources>
    <string name="app_name">Todo</string>
    <string name="all_logout">Logout</string>
    <string name="all_loading">Loading</string>
    <string name="all_login">Login</string>
    <string name="all_signup">Sign up</string>
    <string name="newtodo_title">Title</string>
    <string name="newtodo_description">Description</string>
    <string name="newtodo_save">Save</string>
    <string name="all_email">Email</string>
    <string name="all_password">Password</string>
</resources>
