<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.newtodo.NewTodoActivity">


    <EditText
        android:id="@+id/edittext_newtodo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newtodo_title"
        />

    <EditText
        android:id="@+id/edittext_newtodo_decription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newtodo_description"
        />

    <Button
        android:id="@+id/button_newtodo_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newtodo_save"
        />

</LinearLayout>
